[package]
name = "eval-utility"
version = "0.2.0"
edition = "2021"
rust-version = "1.61.0"
description = "Wrapper function of the evaluator crate. Provides python-like built-in functions."
readme = "README.md"
homepage = "https://github.com/floating-floaties/eval-utility/"
repository = "https://github.com/floating-floaties/eval-utility/"
license = "GPL-3.0-only"
keywords = ["expression", "evaluator", "condition", "parse"]
exclude = ["Dockerfile", "target", "docker*", "*.lock", ".*"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = "^0.4"
chrono-tz = { version = "^0.6", features = ["serde"] }
regex = "^1.6"
log = "^0.4"
lazy_static = "1.4.0"
hashbrown = "0.12"

resolver = { git = "https://github.com/floating-floaties/resolver.git" }
inflection-rs = { git = "https://github.com/floating-floaties/inflection-rs.git" }