[package]
name = "eval-utility"
version = "0.2.2"
edition = "2024"
description = "Wrapper function of the evaluator crate. Provides python-like built-in functions."
readme = "README.md"
homepage = "https://github.com/floating-floaties/eval-utility/"
repository = "https://github.com/floating-floaties/eval-utility/"
license = "GPL-3.0-only"
keywords = ["expression", "evaluator", "condition", "parse"]
exclude = ["Dockerfile", "target", "docker*", "*.lock", ".*"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
chrono-tz = { version = "0.10.3", features = ["serde"] }
regex = "1.11.1"
log = "0.4.27"
lazy_static = "1.5.0"

# resolver = { git = "https://github.com/floating-floaties/resolver.git" }
# inflection-rs = { git = "https://github.com/floating-floaties/inflection-rs.git" }
# string-utility = { git = "https://github.com/floating-floaties/string-utility.git" }

resolver = "0.1.3"
inflection-rs = "0.2.2"
string-utility = "0.2.1"
